src/style/main.scss
html {
    font-size: 62.5%;
}

h1 {
    font-size: 1.5rem;
}

*,
*::after,
*::before {
    margin: 0;
    padding: 0;
    box-sizing: inherit;
}

body {
    font-family: "Open Sans";
    color: #808080;

    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: optimizeLegibility;
    -webkit-tap-highlight-color: transparent;
}

@import './layout';
@import './headernavbar';

@import './page-title';
@import './form-fields';
@import './details';

@import './quantity';
@import './green-price-tag';

// AUTH
@import 'auth/signin';
@import 'auth/signup';

//ACCOUNT
@import 'account/account';
@import 'account/account-information';
@import 'account/purchase-history';

//SHOP
@import 'shop/shop';
@import 'shop/shop-searchbar';
@import 'shop/shop-product';
@import 'shop/shop-cart';
@import 'shop/cart-product';

// ORDER REVIEW
@import 'order/review';
@import 'order/review-form';
@import 'order/review-product';

// BILLING INFORMATION
@import 'information/shipping';
@import 'information/payment';
@import 'information/info-help';

